# AIAgent

./: .env  package-lock.json  package.json  pyproject.toml
mcp_client/: client.py  mcp_client.py
mcp_server/: mcp_server.py
mcp_server/data/: content.txt
