[project]
name = "aiagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "dotenv>=0.9.9",
    "fastapi>=0.127.0",
    "fastmcp>=2.14.1",
    "google-genai>=1.56.0",
    "google-generativeai>=0.8.6",
    "mcp[cli]>=1.25.0",
    "nest-asyncio>=1.6.0",
    "uvicorn>=0.40.0",
]
